data/derived/comb/progs/unify/prog6856.ml.out
Characters 40-43:
  let f a x = bigAdd ([a]::[0]) (mulByDigit x l1) in
                      ^^^
Error: This expression has type 'a list
       but an expression was expected of type int
